welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:9: error: not found: value color
def growFlowers() {haut(Color.RED,Color.BLUE);trans();mid();trans();haut(color.PINK,color.GREEN)}
                                                                         ^FlowerPot:9: error: not found: value color
def growFlowers() {haut(Color.RED,Color.BLUE);trans();mid();trans();haut(color.PINK,color.GREEN)}
                                                                                    ^